infra/k8s/expiration-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: dgabka/ticketing-expiration
        ports:
        - containerPort: 3000
