infra/k8s/tickets-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
spec:
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: dgabka/ticketing-tickets
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
  - port: 3000
    targetPort: 3000
